[gd_scene load_steps=9 format=2]

[ext_resource path="res://Biblioteca/Map022.png" type="Texture" id=1]
[ext_resource path="res://Biblioteca/Spite_num4-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://Biblioteca/Sprite_num1-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://Biblioteca/Sprite_num3-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://Biblioteca/Sprite_num_2-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Node2D.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240.5, 89 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="mapa022" type="Sprite" parent="."]
position = Vector2( 3295, 2448 )
scale = Vector2( 6.75833, 6.75834 )
texture = ExtResource( 1 )

[node name="SpriteNum1-removebg-preview" type="Sprite" parent="."]
position = Vector2( 696, 2490 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="SpriteNum2-removebg-preview" type="Sprite" parent="."]
position = Vector2( 860, 2485 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="SpriteNum3-removebg-preview" type="Sprite" parent="."]
position = Vector2( 1027, 2488 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="SpiteNum4-removebg-preview" type="Sprite" parent="."]
position = Vector2( 1188, 2490 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 639.0
margin_top = 2453.0
margin_right = 757.0
margin_bottom = 2763.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 811.0
margin_top = 2450.0
margin_right = 916.0
margin_bottom = 2766.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 971.0
margin_top = 2449.0
margin_right = 1085.0
margin_bottom = 2762.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1130.0
margin_top = 2457.0
margin_right = 1250.0
margin_bottom = 2760.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonComputer" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 790.0
margin_top = 1800.0
margin_right = 935.0
margin_bottom = 1912.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 3336, 3423 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3299.5, 3714 )
shape = SubResource( 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="ButtonComputer" to="." method="_on_ButtonComputer_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
